--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,6 @@
-# After changing this file, check it on:
-#   http://lint.travis-ci.org/
 language: python
-python:
-  - 2.7
-  - 3.4
-virtualenv:
-    system_site_package: false
-before_install:
- - sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu/ trusty main universe"
- - sudo apt-get update
- - sudo apt-get install -qq python-numpy python-six
- - sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu/ vivid main universe"
- - sudo apt-get update
- - sudo apt-get install libquantlib0-dev
- - pip install -r requirements.txt --use-mirrors
-install:
-    make build
-script:
- - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then python -m unittest discover; fi
- - if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then python -m unittest discover; fi
-notifications:
-  email: 
-    - dpinte@enthought.com
+php:
+- 2.7
+- 3.4
+- hhvm
+script: unittest
