Adds python as the script

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,5 @@ python:
   - "2.7"
   - "3.4"
 # command to run tests
-script: python
+script: python test_super_sum.py
+        python test_addition.py
